[gd_scene load_steps=3 format=3 uid="uid://ci30gp6r0mqmn"]

[ext_resource type="Script" uid="uid://dsqug3ykjp5or" path="res://scripts/game_ui.gd" id="1_57gf6"]
[ext_resource type="FontFile" uid="uid://b0n31aftfbkjc" path="res://assets/fonts/Bread_Smile.ttf" id="2_rns2u"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_57gf6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 24.0
offset_top = 16.0
offset_right = 348.0
offset_bottom = 88.0
theme_override_fonts/normal_font = ExtResource("2_rns2u")
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/normal_font_size = 40
text = "Score : 0"

[node name="ComboLabel" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 24.0
offset_top = 506.0
offset_right = 348.0
offset_bottom = 624.0
theme_override_fonts/normal_font = ExtResource("2_rns2u")
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/normal_font_size = 75
text = "0x"

[node name="AccuracyLabel" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 24.0
offset_top = 72.0
offset_right = 348.0
offset_bottom = 120.0
theme_override_fonts/normal_font = ExtResource("2_rns2u")
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/normal_font_size = 30
text = "100.00%"

[node name="TimeLabel" type="RichTextLabel" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 16.0
offset_right = -22.0
offset_bottom = 96.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_fonts/normal_font = ExtResource("2_rns2u")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[right]2:59"
